fix(doc, name): update swagger doc and change var name
