# docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/api/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all users",
                 "produces": [
                     "application/json"
@@ -30,6 +35,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a user by its ID",
                 "consumes": [
                     "application/json"
@@ -38,6 +48,17 @@
                     "application/json"
                 ],
                 "summary": "Update user role by ID",
+                "parameters": [
+                    {
+                        "description": "User data",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.User"
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -77,6 +98,11 @@
         },
         "/api/users/qr/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a QR code URL for a user",
                 "produces": [
                     "application/json"
@@ -113,6 +139,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a user by its ID",
                 "produces": [
                     "application/json"
@@ -287,6 +318,14 @@
         },
         "/api/users/role/{id}": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a user by its ID",
                 "consumes": [
                     "application/json"
@@ -296,6 +335,13 @@
                 ],
                 "summary": "Update user role by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "User Role",
                         "name": "role",
@@ -391,6 +437,11 @@
         },
         "/api/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a user by its ID",
                 "produces": [
                     "application/json"
@@ -427,11 +478,25 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a user by its ID",
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Delete user by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -463,6 +528,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a user by its ID",
                 "consumes": [
                     "application/json"
@@ -472,6 +542,13 @@
                 ],
                 "summary": "Update user by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "User data",
                         "name": "user",
